# coordinate

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  md.sh
proto/: coordination_service.proto  message.proto  node_service.proto  task_service.proto
src/: build.rs  main.rs
src/app/: common.rs  middles.rs  mod.rs  node_service.rs  task_service.rs
src/app/entity/: dao.rs  mod.rs  node_entity.rs  task_entity.rs
src/app/service/: auto_scan.rs  mod.rs  node_auth.rs  rebalance.rs
src/cmd/: clean.rs  mod.rs  run.rs
src/config/: config.rs  mod.rs
src/infra/: exit.rs  middle.rs  mod.rs
src/infra/db/: etcd.rs  mod.rs  pg.rs
src/proto/: pb.rs
